# sht4x_docker

./: Dockerfile  README.md  build_and_run.sh  py_sht4x_LCD.py  py_sht4x_read.py  requirements.txt  rm_container.sh
_install_db/: 0_test_script.sh  1_install_docker.sh  1_setup_docker.sh  2_setup_prometheus.sh  2_setup_redis.sh  3_setup_grafana.sh  3_setup_prometheus.sh  4_setup_grafana.sh  5_revise.sh  prometheus.yml  redis-test.py  rm_grafana_container.sh  rm_prometheus_container.sh  start_grafana.sh  start_prometheus.sh
example_build_sht4x_library/: i2c_Clock.py  i2c_driver.py  py_sht4x_LCD.py  setup_pybind11.sh  sht4x_i2c_pybind11.cpp
example_build_sht4x_library/raspberry-pi-i2c-sht4x/: sensirion_i2c_hal.c
example_sht4x_pybind11/: CMakeLists.txt  cmake.sh  i2c_driver.py  py_sht4x_read.py
example_sht4x_pybind11/raspberry-pi-i2c-sht4x/: Makefile  sht4x_i2c_example_usage.c
